--- a/demo/views/index.jade
+++ b/demo/views/index.jade
@@ -9,10 +9,10 @@ html
     link(href='https://res.wx.qq.com/mpres/htmledition/images/favicon1ddd38.ico',rel='Shortcut Icon')
 
     // Library css
-    link(rel='stylesheet', href='//cdn.wedocare.com/vendor/prism/0.0.1/prism.css')
+    link(rel='stylesheet', href='//cdn.weixinjs.org/vendor/prism/0.0.1/prism.css')
     
     // bootstrap
-    link(rel='stylesheet',href='//cdn.wedocare.com/vendor/bootstrap/3.1.1/css/bootstrap.min.css')
+    link(rel='stylesheet',href='//cdn.weixinjs.org/vendor/bootstrap/3.1.1/css/bootstrap.min.css')
     
     // app css
     link(rel='stylesheet', href='/css/app.css')
@@ -925,8 +925,8 @@ html
                 |                     #  #                                                                           
                 |                     G#G#                                                                           
 
-    script(src='//cdn.wedocare.com/vendor/Library/library.min.js')
-    script(src='//cdn.wedocare.com/vendor/bootstrap/3.1.1/js/bootstrap.min.js')
+    script(src='//cdn.weixinjs.org/vendor/Library/library.min.js')
+    script(src='//cdn.weixinjs.org/vendor/bootstrap/3.1.1/js/bootstrap.min.js')
     script(src='/wx/wx.js')
     script var headimgurls = !{headimgurls};
     script(src='/js/app.js')
